fixed everything with logo and nav!!!

--- a/contact.html
+++ b/contact.html
@@ -16,28 +16,38 @@
 
 
   <body>
+    <div id="logorder">
+    <!--This is a comment. It won't show up in your browser, only in the page source-->
 
-<!--This is a comment. It won't show up in your browser, only in the page source-->
-<div id="logo">
-  <div class="logo1">
-    <a href="home.html"><img src="Logo.png" alt="Pri-Mo Events Agency"></a>
-  </div>
-</div>
+
+    <div id="logo">
+      <div class="logo2">
+        <a href="home.html"><img src="Logo.png" alt="Pri-Mo Events Agency"></a>
+      </div>
+    </div>
+
+    <div id="logo4life">
+      <div class="logo3">
+        <a href="home.html"><img src="Logo.png" alt="Pri-Mo Events Agency"></a>
+      </div>
+    </div>
+
+
+    <nav>
+      <ul id="nav">
+        <li><a href="home.html">Services</a></li>
+        <li><a href="spirit76.html">Our Work</a></li>
+        <li><a href="join.html">Join Our Team</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><input class="navsearch" type="text" placeholder="Search..."></li>
+      </ul>
+    </nav>
+
+    </div>
+    
 <div class="search1">
   <input type="text" placeholder="Search..."></li>
 </div>
-
-<nav>
-  <ul id="nav">
-    <li><a href="home.html">Services</a></li>
-    <li><a href="spirit76.html">Our Work</a></li>
-    <li><a href="join.html">Join Our Team</a></li>
-    <li><a href="contact.html">Contact</a></li>
-    <li>
-      <input class="search" type="text" placeholder="Search..."></li>
-
-  </ul>
-</nav>
 
 
 <div id="container">
