--- a/home.html
+++ b/home.html
@@ -16,14 +16,21 @@
 
 <body>
 
+<div id="logorder">
 <!--This is a comment. It won't show up in your browser, only in the page source-->
 
 
-
+<div id="logo">
   <div class="logo2">
     <a href="home.html"><img src="Logo.png" alt="Pri-Mo Events Agency"></a>
   </div>
+</div>
 
+<div id="logo4life">
+  <div class="logo3">
+    <a href="home.html"><img src="Logo.png" alt="Pri-Mo Events Agency"></a>
+  </div>
+</div>
 
 
 <nav>
@@ -36,6 +43,8 @@
   </ul>
 </nav>
 
+</div>
+
 <div class="search1">
   <input type="text" placeholder="Search..."></li>
 </div>
@@ -47,7 +56,8 @@
 
 <div id="home-container"><!-- this is where Grid is set  -->
 
-  <p> <span class= "bold"> Services </span> </p>  <!-- consider making this an h1 or h2 element -->
+
+  <p class="serv"><span class= "bold"> Services </span> </p>  <!-- consider making this an h1 or h2 element -->
     <div class="services">
     <p> There are four categories for every project. We do production (budget, AE, management), client services,
       strategy (digital/PR/branding or theme),  design (overall aesthetic, staging, lighting), and
