--- a/join.html
+++ b/join.html
@@ -17,17 +17,21 @@
   </head>
 
 
+<div id="logorder">
+
 <!--This is a comment. It won't show up in your browser, only in the page source-->
 <div id="logo">
-  <div class="logo1">
+  <div class="logo2">
     <a href="home.html"><img src="Logo.png" alt="Pri-Mo Events Agency"></a>
   </div>
 </div>
 
-
-<div class="search1">
-  <input type="text" placeholder="Search..."></li>
+<div id="logo4life">
+  <div class="logo3">
+    <a href="home.html"><img src="Logo.png" alt="Pri-Mo Events Agency"></a>
+  </div>
 </div>
+
 
 <nav>
   <ul id="nav">
@@ -36,10 +40,17 @@
     <li><a href="join.html">Join Our Team</a></li>
     <li><a href="contact.html">Contact</a></li>
     <li>
-      <input class="search" type="text" placeholder="Search..."></li>
+      <input class="navsearch" type="text" placeholder="Search..."></li>
 
   </ul>
 </nav>
+
+</div>
+
+<div class="search1">
+  <input type="text" placeholder="Search..."></li>
+</div>
+
 
 <div id="container">
 
