--- a/join.html
+++ b/join.html
@@ -54,20 +54,20 @@
 
 <div id="container">
 
-  <h3>Join Our Team</h1>
+  <h3 class="join1">Join Our Team</h3>
 
   <!-- <p>Here is a <a href="https://www.apple.com">link to the Apple website, neato.</a></p>
 
   <img src="lime-cat.jpg" alt="A cat with a lime on its head" width="300px" /></a> -->
 
-
+<div class="howtoreg">
   <p> <span class= "howto"> How to Register </span> </p>
+</div>
 
   <ul id="howto">
     <li> Visit <a href="http://stratcomm.missouri.edu/"> MU Strat Comm</a> page to learn more about prerequisites for this course. </li>
     <li> Email <a href="mailto:forrestmd@missouri.edu"> Melanie Forrest</a> to receive a permission number.  </li>
     <li> Enroll in J4672 on myZou. </li>
-    <li> Final steps go here...lorem ipsum lorem ipsum </li>
   </ul>
 
   <p> <span class= "meet"> Meet the Students      </span> </p>
