--- a/spirit76.html
+++ b/spirit76.html
@@ -81,6 +81,8 @@
 </div><!-- close grid4work -->
 
 
+<div id="photogrid">
+
 
 <div class="photo1">
   <img src="SOF_Photos/spirit_logo.jpg" alt="Spirit of Fireworks logo"/>
@@ -106,7 +108,7 @@
   <p class="caption4">Green Fireworks.</p>
 </div>
 
-
+</div>
 </body>
 
 <footer>
