not sure what i did .... ?

--- a/spirit76.html
+++ b/spirit76.html
@@ -85,27 +85,37 @@
 
 
 <div class="photo1">
-  <img src="SOF_Photos/spirit_logo.jpg" alt="Spirit of Fireworks logo"/>
+  <img src="spirit/76-2.jpg" alt="Spirit of Fireworks logo"/>
 
   <p class="caption1">Spirit of Fireworks logo.</p>
 </div>
 
 <div class="photo2">
-  <img src="SOF_Photos/Event.jpg" alt="Event"/>
+  <img src="spirit/76-4.jpg" alt="Event"/>
 
   <p class="caption2">People come together to celebrate at the Spirit of Fireworks event.</p>
 </div>
 
 
 <div class="photo3">
-    <img src="SOF_Photos/popcorn.jpg" alt="popcorn"/>
+    <img src="spirit/76-3.jpg" alt="photo back drop"/>
 
   <p class="caption3">Popcorn was served at the event.</p>
 </div>
 
 <div class="photo4">
-  <img src="SOF_Photos/Boom.jpg" alt="Fireworks"/>
+  <img src="spirit/76-1.jpg" alt="popcorn"/>
   <p class="caption4">Green Fireworks.</p>
+</div>
+
+<div class="photo5">
+  <img src="spirit/76-5.jpg" alt="students1"/>
+  <p class="caption5">Green Fireworks.</p>
+</div>
+
+<div class="photo6">
+  <img src="spirit/76-6.jpg" alt="students2"/>
+  <p class="caption6">Green Fireworks.</p>
 </div>
 
 </div>
