--- a/spirit76.html
+++ b/spirit76.html
@@ -109,7 +109,7 @@
 </div>
 
 <div class="photo5">
-  <img src="spirit/76-5.jpg" alt="students1"/>
+  <img src="spirit/76-5-1.jpg" alt="students1"/>
   <p class="caption5">Green Fireworks.</p>
 </div>
 
