changed grid name

--- a/rainbow.html
+++ b/rainbow.html
@@ -76,7 +76,7 @@
 
 </div>
 
-<div id="grid4work2">
+<div id="photogrid2">
 
   <div class="photo1">
     <img src="pictures/Kidsplaying1.jpg" alt="Rainbow house kids"/>
