--- a/rainbow.html
+++ b/rainbow.html
@@ -79,27 +79,30 @@
 <div id="photogrid2">
 
   <div class="photo1">
-    <img src="pictures/Kidsplaying1.jpg" alt="Rainbow house kids"/>
+    <img src="rainbow/rh-4.jpg" alt="Rainbow house kids"/>
 
-    <p class="caption1">Rainbow House kids.</p>
+    <p class="caption">Rainbow House kids.</p>
   </div>
 
   <div class="photo2">
-    <img src="pictures/Volunteering.jpg" alt="People volunteering"/>
-
-    <p class="caption2">People volunteering.</p>
+    <img src="rainbow/rh-2.jpg" alt="People volunteering"/>
+    <p class="caption">People volunteering.</p>
   </div>
 
 
   <div class="photo3">
-    <img src="pictures/kids2.png" alt="More kids"/>
-
-    <p class="caption3">Kids at Rainbow House.</p>
+    <img src="rainbow/rh-3.jpg" alt="More kids"/>
+    <p class="caption">Kids at Rainbow House.</p>
   </div>
 
   <div class="photo4">
-    <img src="pictures/Reading.jpg" alt="Reading"/>
-    <p class="caption4">Reading to kids.</p>
+    <img src="rainbow/rh-1.jpg" alt="Reading"/>
+    <p class="caption">Reading to kids.</p>
+  </div>
+
+  <div class="photo5">
+    <img src="rainbow/rh-5.jpg" alt="Reading"/>
+    <p class="caption">Reading to kids.</p>
   </div>
 
 </div>
