--- a/spirit76.html
+++ b/spirit76.html
@@ -61,6 +61,7 @@
   <ul id="nav2">
     <li><a href="spirit76.html">Spirit of 76 Fireworks</a></li>
     <li><a href="rainbow.html">Rainbow House</a></li>
+    <li><a href="mpa.html">Missouri Progress Awards</a></li>
   </ul>
 </div>
 
