did the contact page!

--- a/rainbow.html
+++ b/rainbow.html
@@ -79,6 +79,8 @@
 
 <div id="photogrid2">
 
+  <p class="underline"> Photos </p>
+
   <div class="photo1">
     <img src="rainbow/rh-4.jpg" alt="Rainbow house kids"/>
 
