--- a/spirit76.html
+++ b/spirit76.html
@@ -84,6 +84,8 @@
 
 <div id="photogrid">
 
+<p class="underline"> Photos </p>
+
 
 <div class="photo1">
   <img src="spirit/76-2.jpg" alt="Spirit of Fireworks logo"/>
