--- a/contact.html
+++ b/contact.html
@@ -44,27 +44,38 @@
     </nav>
 
     </div>
-    
+
 <div class="search1">
   <input type="text" placeholder="Search..."></li>
 </div>
 
 
+
 <div id="container">
-  <h3>Contact</h3>
 
-    <p> We'd love to work with you! Whether you have an event that needs hosting...blah
-    blah blah...enter your name in below and we'll get back to you. </p>
+  <div id="contact">
 
-<ul id="contact">
-  <li> E: <a href="mailto:forrestmd@missouri.edu"> forrestmd@missouri.edu </a>
-  </li>
-  <li> P: 847-826-3045 </li>
-  <li> <a href="https://github.com/j4502-ss18/class/wiki/Syllabus"> @alyssaweisberg5 </a>
-  </li>
-</ul>
+    <div class="Mel">
+      <img src="melanie-forrest.jpg" alt="Melanie Forrest">
+    </div>
+
+  <div class="contactinfo">
+
+<p class="name"> Melanie Forrest </p>
+
+    <ul id="contactlist">
+      <li class="space"> Email: <a href="mailto:forrestmd@missouri.edu"> forrestmd@missouri.edu </a> </li>
+      <li> Phone: 573-884-6707 </li>
+      </li>
+    </ul>
+
+  </div>
+  
+    <p class="description1"> "Melanie Forrest serves as the Engagement and Outreach Coordinator for the Missouri School of Journalism. She is directly involved in engagement efforts nationwide to bring the best and brightest to Mizzou for our undergraduate programs. She also serves as a Strategic Communications Adjunct Professor specializing in our AdZou capstone agency course, PR Design and PR Events and Promotions courses for the Missouri Journalism faculty. Forrest has been instrumental in the development of course curriculum and partnerships with area businesses and non-profits for the PR Events and Promotions course utilizing the Missouri Method." - <a href="https://journalism.missouri.edu/staff/melanie-forrest/">Missouri School of Journalism</a> </p>
 
 
+
+</div>
 </body>
 
 <footer>
