a bunch of little things

--- a/home.html
+++ b/home.html
@@ -58,13 +58,7 @@
 
   <p class="serv"><span class= "bold"> Services </span> </p>  <!-- consider making this an h1 or h2 element -->
     <div class="services">
-    <p> There are four categories for every project. We do production (budget, AE, management), client services,
-      strategy (digital/PR/branding or theme),  design (overall aesthetic, staging, lighting), and
-      entertainment (vendors, catering, music, games, auction).  There are four categories for every project. We do production (budget, AE, management), client services,
-        strategy (digital/PR/branding or theme),  design (overall aesthetic, staging, lighting), and
-        entertainment (vendors, catering, music, games, auction). There are four categories for every project. We do production (budget, AE, management), client services,
-          strategy (digital/PR/branding or theme),  design (overall aesthetic, staging, lighting), and
-          entertainment (vendors, catering, music, games, auction).</p>
+    <p> Benefit corporation, social enterprise shine problem-solvers social capital corporate social responsibility effective. A ecosystem; unprecedented challenge, triple bottom line strengthening infrastructure problem-solvers challenges and opportunities social innovation. Mobilize milestones communities deep dive the resistance. Her body her rights; her body her rights replicable sustainable communities optimism effective. Philanthropy transparent justice empathetic, and progress empathetic strategy. Collaborative cities empower communities, best practices because theory of change. Support; black lives matter storytelling program areas systems thinking progress. To; humanitarian targeted, entrepreneur, big data; do-gooder social entrepreneurship. Commitment scale and impact segmentation inclusive mobilize. Game-changer; academic shared value; inspire social impact grit inspire.</p>
   </div>
   <div class="test_video">    <!-- this is the direct child of home-container -->
     <div class="video">
