--- a/spirit76.html
+++ b/spirit76.html
@@ -54,9 +54,9 @@
 </div>
 
 
-    <div id="grid4work">
+  <div id="grid4work">
 
-      <div class="trigger">
+  <div class="trigger">
         <h4>Our Work</h4>
   <ul id="nav2">
     <li><a href="spirit76.html">Spirit of 76 Fireworks</a></li>
@@ -68,7 +68,7 @@
   <h3 class="intro">Spirit of 76 Fireworks</h3>
 
   <div id="work-container">
-  <p class="part1"> <span class= "bold2"> Event Info: </span> The event itself was for all of their national clients to attend in appreciation for their business and to also showcase their fireworks products for summer orders.  Their clients own firework stands throughout the country and attend this social to view product, socialize and talk with Spirit of 76. </p>
+  <p class="part1"> <span class= "bold2"> Event Info: </span> This event was held to show appreciation for all of the national clients of Spirit of 76 Fireworks, and to also showcase the latest fireworks products for summer orders.  Spirit of 76's clients own firework stands throughout the country and attend this social to view product, socialize and talk with Spirit of 76. </p>
   <p class="part2"> For more information, please visit the <a href="https://www.76fireworks.com/">Spirit of 76 Fireworks website.</a> </p>
   </div>
 
@@ -90,13 +90,13 @@
 <div class="photo1">
   <img src="spirit/76-2.jpg" alt="Spirit of Fireworks logo"/>
 
-  <p class="caption1">Spirit of Fireworks logo.</p>
+  <p class="caption1"> Spirit of 76 decor included .</p>
 </div>
 
 <div class="photo2">
   <img src="spirit/76-4.jpg" alt="Event"/>
 
-  <p class="caption2">People come together to celebrate at the Spirit of Fireworks event.</p>
+  <p class="caption2">The event space was set up .</p>
 </div>
 
 
