adjustments to "Our work"

--- a/mpa.html
+++ b/mpa.html
@@ -52,7 +52,7 @@
   <div id="grid4work">
 
   <div class="trigger">
-      <h4>Our Work</h4>
+      <h4>Our Events</h4>
   <ul id="nav2">
     <li><a href="spirit76.html">Spirit of 76 Fireworks</a></li>
     <li><a href="rainbow.html">Rainbow House</a></li>
@@ -64,8 +64,8 @@
 
 
 <div id="work-container">
-  <p class="part1"> <span class= "bold2"> Event Info: </span> Our Rainbow House Masquerade Ball is our biggest and most important fundraiser. We hold it each year in April in honor of April being Child Abuse Awareness month. The funds raised from the Gala support Rainbow House by helping to provide food, clothing, bedding and more for the children that stay here through out the year. This year's theme is "NASCAR." </p>
-  <p class="part2"> For more information, please visit the <a href="https://rainbowhousecolumbia.org/events/masqueradeball.html">Rainbow House website.</a> </p>
+  <p class="part1"> <span class= "bold2"> Event Info: </span> The Missourian Progress Awards recognized the people who help make Columbia a great place to live and move us forward every year. This is a new annual awards program designed to lift up people who are engaged in our community and who may not be recognized for their contributions otherwise. Award categories range from civic engagement to sustainability to philanthropy — there's a category for everyone in our community. Winners and nominees were recognized at the Progress Awards event and in a special edition of the Missourian in December. </p>
+  <p class="part2"> For more information, please visit the <a href="https://www.columbiamissourian.com/special_section/progress/progress-awards-you-don-t-have-to-go-far-to/article_3dc7258c-d3f5-11e7-b542-b3fc25202863.html">Columbia Missourian website.</a> </p>
 </div>
 
   <div class="test_76">
@@ -78,6 +78,8 @@
 </div>
 
 <div id="photogrid">
+
+<p class="underline"> Photos </p>
 
   <div class="photo1">
     <img src="mpa/mpa-1.jpg" alt="Rainbow house kids"/>
