--- a/spirit76.html
+++ b/spirit76.html
@@ -57,7 +57,7 @@
   <div id="grid4work">
 
   <div class="trigger">
-        <h4>Our Work</h4>
+        <h4>Our Events</h4>
   <ul id="nav2">
     <li><a href="spirit76.html">Spirit of 76 Fireworks</a></li>
     <li><a href="rainbow.html">Rainbow House</a></li>
@@ -90,35 +90,35 @@
 <div class="photo1">
   <img src="spirit/76-2.jpg" alt="Spirit of Fireworks logo"/>
 
-  <p class="caption1"> Spirit of 76 decor included .</p>
+  <p class="caption"> <i> Spirit of 76 decor included fireworks-inspired table settings.</i></p>
 </div>
 
 <div class="photo2">
   <img src="spirit/76-4.jpg" alt="Event"/>
 
-  <p class="caption2">The event space was set up .</p>
+  <p class="caption"><i>The event space was set up to seat 50 of Spirit of 76's national clients.</i></p>
 </div>
 
 
 <div class="photo3">
     <img src="spirit/76-3.jpg" alt="photo back drop"/>
 
-  <p class="caption3">Popcorn was served at the event.</p>
+  <p class="caption"> <i> Numerous walls were decorated to match table settings as a place for clients to take photos. </i> </p>
 </div>
 
 <div class="photo4">
   <img src="spirit/76-1.jpg" alt="popcorn"/>
-  <p class="caption4">Green Fireworks.</p>
+  <p class="caption"><i>These popcorn-inspired decorations were chosen to work alongside our entertainment themed decor.</i></p>
 </div>
 
 <div class="photo5">
-  <img src="spirit/76-5-1.jpg" alt="students1"/>
-  <p class="caption5">Green Fireworks.</p>
+  <img src="spirit/76-5.png" alt="students1"/>
+  <p class="caption"><i>Our students, Jane Doe and Janet Doe, creating table centerpieces.</i></p>
 </div>
 
 <div class="photo6">
-  <img src="spirit/76-6.jpg" alt="students2"/>
-  <p class="caption6">Green Fireworks.</p>
+  <img src="spirit/76-6.png" alt="students2"/>
+  <p class="caption"><i>Our students, Janice Doe and John Doe, transporting decorations to the  event space.</i></p>
 </div>
 
 </div>
