--- a/mpa.html
+++ b/mpa.html
@@ -52,7 +52,7 @@
   <div id="grid4work">
 
   <div class="trigger">
-      <h4>Our Events</h4>
+      <h4>Events</h4>
   <ul id="nav2">
     <li><a href="spirit76.html">Spirit of 76 Fireworks</a></li>
     <li><a href="rainbow.html">Rainbow House</a></li>
@@ -84,33 +84,33 @@
   <div class="photo1">
     <img src="mpa/mpa-1.jpg" alt="Rainbow house kids"/>
 
-    <p class="caption">Rainbow House kids.</p>
+    <p class="caption">Keynote speaker, Jonathan Doe, gives opening remarks at the Missouri Prorgess Awards.</p>
   </div>
 
   <div class="photo2">
     <img src="mpa/mpa-2.jpg" alt="People volunteering"/>
-    <p class="caption">People volunteering.</p>
+    <p class="caption">Guests attend the banquet prior to the awards were annouced.</p>
   </div>
 
 
   <div class="photo3">
     <img src="mpa/mpa-6.jpg" alt="More kids"/>
-    <p class="caption">Kids at Rainbow House.</p>
+    <p class="caption">Award recipients (left to right): John Doe, Jonathan Doe, Jane Doe, Janice, Doe, Johnny Doe, Joe Doe, Janet Doe, Jon Doe, and Jorn Doe. </p>
   </div>
 
   <div class="photo4">
     <img src="mpa/mpa-3.jpg" alt="Reading"/>
-    <p class="caption">Reading to kids.</p>
+    <p class="caption">Award recipient, John Doe, recieved his award from Jonathan Doe.</p>
   </div>
 
   <div class="photo5">
     <img src="mpa/mpa-5.jpg" alt="Reading"/>
-    <p class="caption">Reading to kids.</p>
+    <p class="caption">Table settings before guests arrive.</p>
   </div>
 
   <div class="photo6">
     <img src="mpa/mpa-4.jpg" alt="Reading"/>
-    <p class="caption">Reading to kids.</p>
+    <p class="caption">Pri-Mo's team of students behind the Missouri Progress Awards.</p>
   </div>
 
 </div>
