--- a/rainbow.html
+++ b/rainbow.html
@@ -52,7 +52,7 @@
   <div id="grid4work">
 
   <div class="trigger">
-      <h4>Our Events</h4>
+      <h4>Events</h4>
   <ul id="nav2">
     <li><a href="spirit76.html">Spirit of 76 Fireworks</a></li>
     <li><a href="rainbow.html">Rainbow House</a></li>
@@ -84,28 +84,28 @@
   <div class="photo1">
     <img src="rainbow/rh-4.jpg" alt="Rainbow house kids"/>
 
-    <p class="caption">Rainbow House kids.</p>
+    <p class="caption">The Rainbow House Masquerade Ball was held at *insert location* event space.</p>
   </div>
 
   <div class="photo2">
     <img src="rainbow/rh-2.jpg" alt="People volunteering"/>
-    <p class="caption">People volunteering.</p>
+    <p class="caption">Small themed gift items were given to every guest as they left for the evening.</p>
   </div>
 
 
   <div class="photo3">
     <img src="rainbow/rh-3.jpg" alt="More kids"/>
-    <p class="caption">Kids at Rainbow House.</p>
+    <p class="caption"> Our NASCAR-themed table decor included checkered napkins, etc etc. </p>
   </div>
 
   <div class="photo4">
-    <img src="rainbow/rh-1.jpg" alt="Reading"/>
-    <p class="caption">Reading to kids.</p>
+    <img src="rainbow/rh-1.png" alt="Reading"/>
+    <p class="caption">A close-up on our table centerpieces.</p>
   </div>
 
   <div class="photo5">
     <img src="rainbow/rh-5.jpg" alt="Reading"/>
-    <p class="caption">Reading to kids.</p>
+    <p class="caption">Student, Jane Doe, constructs table centerpieces.</p>
   </div>
 
 </div>
