--- a/spirit76.html
+++ b/spirit76.html
@@ -57,7 +57,7 @@
   <div id="grid4work">
 
   <div class="trigger">
-        <h4>Our Events</h4>
+        <h4>Events</h4>
   <ul id="nav2">
     <li><a href="spirit76.html">Spirit of 76 Fireworks</a></li>
     <li><a href="rainbow.html">Rainbow House</a></li>
