--- a/join.html
+++ b/join.html
@@ -54,7 +54,7 @@
 
 <div id="container">
 
-  <h3 class="join1">Join Our Team</h3>
+<h3 class="join1">Join Our Team</h3>
 
   <!-- <p>Here is a <a href="https://www.apple.com">link to the Apple website, neato.</a></p>
 
@@ -62,45 +62,32 @@
 
 <div class="howtoreg">
   <p> <span class= "howto"> How to Register </span> </p>
+  <p> <i> Are you a Strategic Communication student at the Missouri School of Journalism? Are you interested in Event Planning and Promotions? Follow the steps below to join our team and be a part of PRI-MO's next event teams!</i> </p>
 </div>
 
   <ul id="howto">
     <li> Visit <a href="http://stratcomm.missouri.edu/"> MU Strat Comm</a> page to learn more about prerequisites for this course. </li>
     <li> Email <a href="mailto:forrestmd@missouri.edu"> Melanie Forrest</a> to receive a permission number.  </li>
-    <li> Enroll in J4672 on myZou. </li>
+    <li> Enroll in J4672 on <a href="myzou.missouri.edu">MyZou</a>. </li>
   </ul>
 
-  <p> <span class= "meet"> Meet the Students      </span> </p>
+  <p> <span class= "meet"> Meet the PRI-MO Team</span> </p>
 
-  <div id="work-container">
-  <div class="students">
-    <img src="pictures/boy1.jpg" alt="A picture of Rey"/>
 
-    <p class="caption">Rey is a key contributor.</p>
+    <div id="join">
+
+      <div class="team">
+          <img src="mpa/mpa-4.jpg" alt="team"/>
+      </div>
+
+      <div=class="description2">
+      <p> All events by PRI-MO are planned, organized, designed, and executed by students in the Events and Promotions course using the Missouri Method through the Missouri School of Journalism. Students can choose to work in one of four roles, account, strategy, design, and entertainment. </p>
+
+      <p> <b>PRI-MO Students</b>: <i> (back row) </i> Jane Doe (production), John Doe (strategy), Jane Doe (design), Jonathan Doe (entertainment), John Doe (strategy), Jane Doe (design), Jonathan Doe (entertainment); <i> (middle row) </i> Jane Doe (production), John Doe (strategy), Jane Doe (design), Jonathan Doe (entertainment), Melanie Forrest (instructor); <i> (front row) </i> Jane Doe (production), John Doe (strategy), Jane Doe (design), Jonathan Doe (entertainment), John Doe (strategy). - <a href="https://journalism.missouri.edu/staff/melanie-forrest/">Missouri School of Journalism</a> </p>
+    </div>
+
   </div>
-
-  <div class="Students">
-    <img src="pictures/boy2.jpg" alt="A picture of Rob"/>
-
-    <p class="caption">Rob is a key contributor.</p>
-  </div>
-
-
-  <div class="Students">
-    <img src="pictures/girl1.jpg" alt="A picture of Julia"/>
-
-    <p class="caption">Julia is a key contributor.</p>
-  </div>
-
-  <div class="Students">
-    <img src="pictures/girl3.jpg" alt="A picture of Olivia"/>
-
-    <p class="caption">Olivia is a key contributor.</p>
-  </div>
-</div>
-
-</body>
-
+  </body>
 
 <footer>
     <p>Content &copy; 2018, PRI-MO Events Agency</p>
