--- a/join.html
+++ b/join.html
@@ -81,9 +81,9 @@
       </div>
 
       <div=class="description2">
-      <p> All events by PRI-MO are planned, organized, designed, and executed by students in the Events and Promotions course using the Missouri Method through the Missouri School of Journalism. Students can choose to work in one of four roles, account, strategy, design, and entertainment. </p>
+      <p> All events by PRI-MO are planned, organized, designed, and executed by students in the Events and Promotions course using the Missouri Method through the <a href="https://journalism.missouri.edu/">Missouri School of Journalism</a>. Students can choose to work in one of four roles, account, strategy, design, and entertainment.  </p>
 
-      <p> <b>PRI-MO Students</b>: <i> (back row) </i> Jane Doe (production), John Doe (strategy), Jane Doe (design), Jonathan Doe (entertainment), John Doe (strategy), Jane Doe (design), Jonathan Doe (entertainment); <i> (middle row) </i> Jane Doe (production), John Doe (strategy), Jane Doe (design), Jonathan Doe (entertainment), Melanie Forrest (instructor); <i> (front row) </i> Jane Doe (production), John Doe (strategy), Jane Doe (design), Jonathan Doe (entertainment), John Doe (strategy). - <a href="https://journalism.missouri.edu/staff/melanie-forrest/">Missouri School of Journalism</a> </p>
+      <p> <b>PRI-MO Students</b>: <i> (back row) </i> Jane Doe (production), John Doe (strategy), Jane Doe (design), Jonathan Doe (entertainment), John Doe (strategy), Jane Doe (design), Jonathan Doe (entertainment); <i> (middle row) </i> Jane Doe (production), John Doe (strategy), Jane Doe (design), Jonathan Doe (entertainment), Melanie Forrest (instructor); <i> (front row) </i> Jane Doe (production), John Doe (strategy), Jane Doe (design), Jonathan Doe (entertainment), John Doe (strategy). </p>
     </div>
 
   </div>
