--- a/home.html
+++ b/home.html
@@ -57,9 +57,22 @@
 
 
   <p class="serv"><span class= "bold"> Services </span> </p>  <!-- consider making this an h1 or h2 element -->
-    <div class="services">
-    <p> Benefit corporation, social enterprise shine problem-solvers social capital corporate social responsibility effective. A ecosystem; unprecedented challenge, triple bottom line strengthening infrastructure problem-solvers challenges and opportunities social innovation. Mobilize milestones communities deep dive the resistance. Her body her rights; her body her rights replicable sustainable communities optimism effective. Philanthropy transparent justice empathetic, and progress empathetic strategy. Collaborative cities empower communities, best practices because theory of change. Support; black lives matter storytelling program areas systems thinking progress. To; humanitarian targeted, entrepreneur, big data; do-gooder social entrepreneurship. Commitment scale and impact segmentation inclusive mobilize. Game-changer; academic shared value; inspire social impact grit inspire.</p>
+
+    <div id="services">
+    <div class="services1"> <span class= "bold3"> Account </span>
+    <p>Lorem ipsum dolor sit amet, illum utinam tincidunt nec no. Ea duo percipit dignissim, cum cu vero assueverit, pri ea dicta tantas putent. Habeo laoreet ea quo, ei eam tamquam laboramus. Tibique propriae vituperatoribus mel ut, etiam consul cu sed. </p> </div>
+
+    <div class="services2"> <span class= "bold3"> Strategy </span>
+    <p> Has odio neglegentur te, consetetur cotidieque conclusionemque in duo.Adhuc harum diceret per ei. Eu feugait persecuti adversarium nec. Ut habeo vituperatoribus vim. Ei liber facete usu, te fugit noster vivendo cum. Euripidis honestatis sit at. At eam ludus soluta, ut quaestio eloquentiam his.</p> </div>
+
+    <div class="services3"> <span class= "bold3"> Design </span>
+    <p> Cum ex brute tamquam appareat. Te graeco graecis efficiendi vis, ut hinc fuisset qui. In mel munere iuvaret interpretaris, eu eripuit dignissim has. </p> </div>
+
+    <div class="services4"> <span class= "bold3"> Entertainment </span>
+    <p> Mollis impetus theophrastus ea per. Decore facete eos no, augue ubique nostrud nam ad. Eu mei semper volumus verterem, vix ad soluta scripta assueverit.</p> </div>
   </div>
+
+
   <div class="test_video">    <!-- this is the direct child of home-container -->
     <div class="video">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/-I65g0K2_Bo?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
