--- a/join.html
+++ b/join.html
@@ -83,6 +83,8 @@
       <div=class="description2">
       <p> All events by PRI-MO are planned, organized, designed, and executed by students in the Events and Promotions course using the Missouri Method through the <a href="https://journalism.missouri.edu/">Missouri School of Journalism</a>. Students can choose to work in one of four roles, account, strategy, design, and entertainment.  </p>
 
+      <p> Benefit corporation, social enterprise shine problem-solvers social capital corporate social responsibility effective. A ecosystem; unprecedented challenge, triple bottom line strengthening infrastructure problem-solvers challenges and opportunities social innovation. Mobilize milestones communities deep dive the resistance. Her body her rights; her body her rights replicable sustainable communities optimism effective. Philanthropy transparent justice empathetic, and progress empathetic strategy. </p>
+
       <p> <b>PRI-MO Students</b>: <i> (back row) </i> Jane Doe (production), John Doe (strategy), Jane Doe (design), Jonathan Doe (entertainment), John Doe (strategy), Jane Doe (design), Jonathan Doe (entertainment); <i> (middle row) </i> Jane Doe (production), John Doe (strategy), Jane Doe (design), Jonathan Doe (entertainment), Melanie Forrest (instructor); <i> (front row) </i> Jane Doe (production), John Doe (strategy), Jane Doe (design), Jonathan Doe (entertainment), John Doe (strategy). </p>
     </div>
 
