--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
 
   <div class="contactinfo">
 
-<p class="name"> Melanie Forrest </p>
+<h3 class="intro"> Melanie Forrest </h3>
 
     <ul id="contactlist">
       <li class="space"> Email: <a href="mailto:forrestmd@missouri.edu"> forrestmd@missouri.edu </a> </li>
@@ -70,7 +70,7 @@
     </ul>
 
   </div>
-  
+
     <p class="description1"> "Melanie Forrest serves as the Engagement and Outreach Coordinator for the Missouri School of Journalism. She is directly involved in engagement efforts nationwide to bring the best and brightest to Mizzou for our undergraduate programs. She also serves as a Strategic Communications Adjunct Professor specializing in our AdZou capstone agency course, PR Design and PR Events and Promotions courses for the Missouri Journalism faculty. Forrest has been instrumental in the development of course curriculum and partnerships with area businesses and non-profits for the PR Events and Promotions course utilizing the Missouri Method." - <a href="https://journalism.missouri.edu/staff/melanie-forrest/">Missouri School of Journalism</a> </p>
 
 
