--- a/rainbow.html
+++ b/rainbow.html
@@ -82,7 +82,7 @@
   <p class="underline"> Photos </p>
 
   <div class="photo1">
-    <img src="rainbow/rh-4.jpg" alt="Rainbow house kids"/>
+    <img src="rainbow/rh-4.JPG" alt="Rainbow house kids"/>
 
     <p class="caption">The Rainbow House Masquerade Ball was held at *insert location* event space.</p>
   </div>
